# OS-Simulation-Platform

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  compile.bat  main.cpp
include/algorithms/: FCFSScheduler.h  PriorityScheduler.h  RoundRobinScheduler.h  SJFScheduler.h  Scheduler.h
include/core/: Process.h
include/memory/: ContiguousAllocator.h  MemoryManager.h  PagingManager.h
include/utils/: boot_animation.h  memory_demo.h  scheduler_demo.h
resources/configs/: system_config.json
scripts/: build.bat
src/memory/: ContiguousAllocator.cpp  MemoryManager.cpp
src/process/: Process.cpp
src/scheduler/: FCFSScheduler.cpp  PriorityScheduler.cpp  RoundRobinScheduler.cpp  SJFScheduler.cpp  Scheduler.cpp
src/ui/: boot_animation.cpp  memory_demo.cpp  scheduler_demo.cpp
